lib_files = [
    'aspn23_dds/MetadataGlonassEphemeris.cxx',
    'aspn23_dds/MeasurementTdoa2Tx1Rx.cxx',
    'aspn23_dds/TypeSatnavSignalDescriptor.cxx',
    'aspn23_dds/TypeRemotePointPubSubTypes.cxx',
    'aspn23_dds/MeasurementAltitudePubSubTypes.cxx',
    'aspn23_dds/MeasurementSatnavWithSvDataPubSubTypes.cxx',
    'aspn23_dds/MeasurementMagneticFieldPubSubTypes.cxx',
    'aspn23_dds/MeasurementPositionAttitude.cxx',
    'aspn23_dds/TypeSatnavClock.cxx',
    'aspn23_dds/MetadataImu.cxx',
    'aspn23_dds/TypeMountingPubSubTypes.cxx',
    'aspn23_dds/MeasurementPositionAttitudePubSubTypes.cxx',
    'aspn23_dds/TypeMetadataheader.cxx',
    'aspn23_dds/MeasurementAttitude2D.cxx',
    'aspn23_dds/TypeImageFeature.cxx',
    'aspn23_dds/MeasurementTemperature.cxx',
    'aspn23_dds/MeasurementDirection3DToPoints.cxx',
    'aspn23_dds/MeasurementTdoa1Tx2RxPubSubTypes.cxx',
    'aspn23_dds/MeasurementVelocityPubSubTypes.cxx',
    'aspn23_dds/TypeSatnavSvDataPubSubTypes.cxx',
    'aspn23_dds/MeasurementTimeDifference.cxx',
    'aspn23_dds/TypeSatnavSatelliteSystemPubSubTypes.cxx',
    'aspn23_dds/MeasurementSatnavSubframePubSubTypes.cxx',
    'aspn23_dds/TypeSatnavSignalDescriptorPubSubTypes.cxx',
    'aspn23_dds/MeasurementImagePubSubTypes.cxx',
    'aspn23_dds/MeasurementSpecificForce1DPubSubTypes.cxx',
    'aspn23_dds/MeasurementAttitude2DPubSubTypes.cxx',
    'aspn23_dds/MetadataGpsIonoUtcParametersPubSubTypes.cxx',
    'aspn23_dds/TypeTimestamp.cxx',
    'aspn23_dds/MeasurementMagneticFieldMagnitudePubSubTypes.cxx',
    'aspn23_dds/TypeHeaderPubSubTypes.cxx',
    'aspn23_dds/MeasurementDirectionOfMotion2D.cxx',
    'aspn23_dds/MeasurementPositionVelocityAttitude.cxx',
    'aspn23_dds/TypeIntegrity.cxx',
    'aspn23_dds/MeasurementSpecificForce1D.cxx',
    'aspn23_dds/MeasurementAccumulatedDistanceTraveled.cxx',
    'aspn23_dds/MeasurementDirection2DToPointsPubSubTypes.cxx',
    'aspn23_dds/MetadataGalileoEphemerisPubSubTypes.cxx',
    'aspn23_dds/MeasurementDeltaRangePubSubTypes.cxx',
    'aspn23_dds/MeasurementTimeFrequencyDifferencePubSubTypes.cxx',
    'aspn23_dds/MeasurementDirectionOfMotion2DPubSubTypes.cxx',
    'aspn23_dds/MetadataGeneric.cxx',
    'aspn23_dds/MeasurementPositionPubSubTypes.cxx',
    'aspn23_dds/TypeImageFeaturePubSubTypes.cxx',
    'aspn23_dds/MeasurementPosition.cxx',
    'aspn23_dds/MeasurementHeadingPubSubTypes.cxx',
    'aspn23_dds/MeasurementTemperaturePubSubTypes.cxx',
    'aspn23_dds/MeasurementAttitude3D.cxx',
    'aspn23_dds/MeasurementMagneticFieldMagnitude.cxx',
    'aspn23_dds/TypeSatnavSatelliteSystem.cxx',
    'aspn23_dds/MeasurementFrequencyDifference.cxx',
    'aspn23_dds/MeasurementDeltaRangeToPoint.cxx',
    'aspn23_dds/MeasurementAngularVelocity1DPubSubTypes.cxx',
    'aspn23_dds/MetadataGenericPubSubTypes.cxx',
    'aspn23_dds/MeasurementRangeToPointPubSubTypes.cxx',
    'aspn23_dds/MetadataImageFeaturesPubSubTypes.cxx',
    'aspn23_dds/MeasurementAngularVelocityPubSubTypes.cxx',
    'aspn23_dds/TypeSatnavObs.cxx',
    'aspn23_dds/MeasurementDirection2DToPoints.cxx',
    'aspn23_dds/MeasurementDirectionOfMotion3DPubSubTypes.cxx',
    'aspn23_dds/TypeMetadataheaderPubSubTypes.cxx',
    'aspn23_dds/MeasurementRangeRateToPointPubSubTypes.cxx',
    'aspn23_dds/TypeDirection3DToPointPubSubTypes.cxx',
    'aspn23_dds/MeasurementDeltaPosition.cxx',
    'aspn23_dds/MeasurementImuPubSubTypes.cxx',
    'aspn23_dds/MeasurementTdoa2Tx1RxPubSubTypes.cxx',
    'aspn23_dds/MeasurementPositionVelocityAttitudePubSubTypes.cxx',
    'aspn23_dds/TypeSatnavTimePubSubTypes.cxx',
    'aspn23_dds/MeasurementRangeRateToPoint.cxx',
    'aspn23_dds/MetadataImageFeatures.cxx',
    'aspn23_dds/MeasurementImu.cxx',
    'aspn23_dds/MeasurementDirection3DToPointsPubSubTypes.cxx',
    'aspn23_dds/MeasurementDeltaRangeToPointPubSubTypes.cxx',
    'aspn23_dds/MeasurementAccumulatedDistanceTraveledPubSubTypes.cxx',
    'aspn23_dds/MeasurementAttitude3DPubSubTypes.cxx',
    'aspn23_dds/MeasurementDeltaRange.cxx',
    'aspn23_dds/MetadataGpsMnavEphemeris.cxx',
    'aspn23_dds/MeasurementTime.cxx',
    'aspn23_dds/MeasurementMagneticField.cxx',
    'aspn23_dds/MetadataGpsCnavEphemeris.cxx',
    'aspn23_dds/MeasurementSpeedPubSubTypes.cxx',
    'aspn23_dds/TypeDirection2DToPoint.cxx',
    'aspn23_dds/MeasurementSatnavPubSubTypes.cxx',
    'aspn23_dds/MeasurementSatnavSubframe.cxx',
    'aspn23_dds/MetadataGpsLnavEphemerisPubSubTypes.cxx',
    'aspn23_dds/TypeSatnavTime.cxx',
    'aspn23_dds/MetadataBeidouEphemerisPubSubTypes.cxx',
    'aspn23_dds/TypeMounting.cxx',
    'aspn23_dds/MeasurementRangeToPoint.cxx',
    'aspn23_dds/TypeIntegrityPubSubTypes.cxx',
    'aspn23_dds/MetadataGalileoEphemeris.cxx',
    'aspn23_dds/TypeTimestampPubSubTypes.cxx',
    'aspn23_dds/MeasurementVelocity.cxx',
    'aspn23_dds/MeasurementDeltaPositionPubSubTypes.cxx',
    'aspn23_dds/MeasurementTimeDifferencePubSubTypes.cxx',
    'aspn23_dds/MeasurementAngularVelocity.cxx',
    'aspn23_dds/TypeSatnavSvData.cxx',
    'aspn23_dds/MeasurementFrequencyDifferencePubSubTypes.cxx',
    'aspn23_dds/MeasurementTimePubSubTypes.cxx',
    'aspn23_dds/MetadataGlonassEphemerisPubSubTypes.cxx',
    'aspn23_dds/MeasurementSatnav.cxx',
    'aspn23_dds/MetadataGpsCnavEphemerisPubSubTypes.cxx',
    'aspn23_dds/TypeSatnavClockPubSubTypes.cxx',
    'aspn23_dds/TypeHeader.cxx',
    'aspn23_dds/MeasurementBarometer.cxx',
    'aspn23_dds/MeasurementTimeFrequencyDifference.cxx',
    'aspn23_dds/TypeRemotePoint.cxx',
    'aspn23_dds/TypeSatnavObsPubSubTypes.cxx',
    'aspn23_dds/MetadataGpsLnavEphemeris.cxx',
    'aspn23_dds/MeasurementSatnavWithSvData.cxx',
    'aspn23_dds/MetadataSatnavObsPubSubTypes.cxx',
    'aspn23_dds/MetadataMagneticField.cxx',
    'aspn23_dds/MeasurementTdoa1Tx2Rx.cxx',
    'aspn23_dds/MetadataBeidouEphemeris.cxx',
    'aspn23_dds/MetadataGpsMnavEphemerisPubSubTypes.cxx',
    'aspn23_dds/TypeDirection3DToPoint.cxx',
    'aspn23_dds/MeasurementSpeed.cxx',
    'aspn23_dds/MetadataSatnavObs.cxx',
    'aspn23_dds/MeasurementAltitude.cxx',
    'aspn23_dds/MeasurementAngularVelocity1D.cxx',
    'aspn23_dds/MeasurementImage.cxx',
    'aspn23_dds/MeasurementDirectionOfMotion3D.cxx',
    'aspn23_dds/TypeKeplerOrbit.cxx',
    'aspn23_dds/TypeDirection2DToPointPubSubTypes.cxx',
    'aspn23_dds/TypeKeplerOrbitPubSubTypes.cxx',
    'aspn23_dds/MetadataMagneticFieldPubSubTypes.cxx',
    'aspn23_dds/MetadataGpsIonoUtcParameters.cxx',
    'aspn23_dds/MetadataImuPubSubTypes.cxx',
    'aspn23_dds/MeasurementHeading.cxx',
    'aspn23_dds/MeasurementBarometerPubSubTypes.cxx'
]

hxx_files = [
    'aspn23_dds/MeasurementPositionAttitudePubSubTypes.h',
    'aspn23_dds/MeasurementDeltaRangePubSubTypes.h',
    'aspn23_dds/MeasurementTemperaturePubSubTypes.h',
    'aspn23_dds/MeasurementDirectionOfMotion2DPubSubTypes.h',
    'aspn23_dds/MeasurementAttitude3DCdrAux.hpp',
    'aspn23_dds/MetadataGpsCnavEphemerisPubSubTypes.h',
    'aspn23_dds/TypeMounting.h',
    'aspn23_dds/MetadataGalileoEphemerisCdrAux.hpp',
    'aspn23_dds/TypeHeaderPubSubTypes.h',
    'aspn23_dds/MeasurementTimeCdrAux.hpp',
    'aspn23_dds/MeasurementTimeDifference.h',
    'aspn23_dds/TypeSatnavSatelliteSystem.h',
    'aspn23_dds/MeasurementDirectionOfMotion3D.h',
    'aspn23_dds/MeasurementDirection3DToPointsPubSubTypes.h',
    'aspn23_dds/TypeIntegrityCdrAux.hpp',
    'aspn23_dds/MeasurementAltitudePubSubTypes.h',
    'aspn23_dds/MeasurementTimePubSubTypes.h',
    'aspn23_dds/MeasurementSatnav.h',
    'aspn23_dds/MetadataSatnavObs.h',
    'aspn23_dds/MeasurementFrequencyDifferenceCdrAux.hpp',
    'aspn23_dds/MeasurementTdoa2Tx1RxPubSubTypes.h',
    'aspn23_dds/MeasurementSatnavWithSvDataPubSubTypes.h',
    'aspn23_dds/MeasurementTimeFrequencyDifference.h',
    'aspn23_dds/TypeSatnavSignalDescriptor.h',
    'aspn23_dds/MeasurementDeltaPosition.h',
    'aspn23_dds/MeasurementDirectionOfMotion3DPubSubTypes.h',
    'aspn23_dds/MeasurementRangeRateToPointCdrAux.hpp',
    'aspn23_dds/MeasurementImageCdrAux.hpp',
    'aspn23_dds/MeasurementAttitude2DCdrAux.hpp',
    'aspn23_dds/MetadataMagneticField.h',
    'aspn23_dds/MeasurementSpeedCdrAux.hpp',
    'aspn23_dds/TypeSatnavTime.h',
    'aspn23_dds/MeasurementDirectionOfMotion2D.h',
    'aspn23_dds/TypeMetadataheaderCdrAux.hpp',
    'aspn23_dds/MeasurementVelocity.h',
    'aspn23_dds/MetadataGpsIonoUtcParameters.h',
    'aspn23_dds/TypeSatnavObsCdrAux.hpp',
    'aspn23_dds/MeasurementImage.h',
    'aspn23_dds/TypeSatnavSignalDescriptorPubSubTypes.h',
    'aspn23_dds/MeasurementImuPubSubTypes.h',
    'aspn23_dds/TypeTimestamp.h',
    'aspn23_dds/MeasurementAngularVelocity.h',
    'aspn23_dds/TypeHeaderCdrAux.hpp',
    'aspn23_dds/MeasurementTime.h',
    'aspn23_dds/MetadataMagneticFieldCdrAux.hpp',
    'aspn23_dds/MeasurementDeltaPositionCdrAux.hpp',
    'aspn23_dds/MeasurementPosition.h',
    'aspn23_dds/MetadataImageFeatures.h',
    'aspn23_dds/MeasurementPositionVelocityAttitude.h',
    'aspn23_dds/MeasurementSatnavSubframeCdrAux.hpp',
    'aspn23_dds/TypeHeader.h',
    'aspn23_dds/MeasurementPositionVelocityAttitudeCdrAux.hpp',
    'aspn23_dds/TypeDirection3DToPointPubSubTypes.h',
    'aspn23_dds/TypeIntegrity.h',
    'aspn23_dds/MeasurementAltitude.h',
    'aspn23_dds/MetadataBeidouEphemerisCdrAux.hpp',
    'aspn23_dds/TypeSatnavSatelliteSystemCdrAux.hpp',
    'aspn23_dds/MetadataImuPubSubTypes.h',
    'aspn23_dds/MeasurementTimeFrequencyDifferenceCdrAux.hpp',
    'aspn23_dds/MeasurementSatnavSubframe.h',
    'aspn23_dds/MeasurementSpecificForce1D.h',
    'aspn23_dds/MetadataGpsCnavEphemerisCdrAux.hpp',
    'aspn23_dds/MeasurementSatnavWithSvData.h',
    'aspn23_dds/TypeSatnavClock.h',
    'aspn23_dds/MeasurementDeltaRangeToPoint.h',
    'aspn23_dds/MetadataImuCdrAux.hpp',
    'aspn23_dds/TypeImageFeature.h',
    'aspn23_dds/MetadataImageFeaturesCdrAux.hpp',
    'aspn23_dds/MeasurementAngularVelocityCdrAux.hpp',
    'aspn23_dds/MeasurementSpecificForce1DPubSubTypes.h',
    'aspn23_dds/MetadataGlonassEphemeris.h',
    'aspn23_dds/MeasurementDeltaRangeToPointCdrAux.hpp',
    'aspn23_dds/TypeSatnavSvData.h',
    'aspn23_dds/MeasurementTdoa1Tx2RxCdrAux.hpp',
    'aspn23_dds/MeasurementAngularVelocity1DCdrAux.hpp',
    'aspn23_dds/MetadataGpsMnavEphemerisPubSubTypes.h',
    'aspn23_dds/MetadataGpsMnavEphemerisCdrAux.hpp',
    'aspn23_dds/TypeSatnavSignalDescriptorCdrAux.hpp',
    'aspn23_dds/MeasurementSatnavCdrAux.hpp',
    'aspn23_dds/MeasurementSpeedPubSubTypes.h',
    'aspn23_dds/TypeSatnavTimeCdrAux.hpp',
    'aspn23_dds/TypeDirection2DToPoint.h',
    'aspn23_dds/MeasurementMagneticField.h',
    'aspn23_dds/MeasurementDeltaRangeCdrAux.hpp',
    'aspn23_dds/TypeTimestampPubSubTypes.h',
    'aspn23_dds/MeasurementTemperatureCdrAux.hpp',
    'aspn23_dds/MeasurementAttitude2DPubSubTypes.h',
    'aspn23_dds/MetadataImu.h',
    'aspn23_dds/MetadataGpsMnavEphemeris.h',
    'aspn23_dds/MetadataBeidouEphemeris.h',
    'aspn23_dds/MetadataSatnavObsPubSubTypes.h',
    'aspn23_dds/TypeSatnavClockPubSubTypes.h',
    'aspn23_dds/MeasurementSpecificForce1DCdrAux.hpp',
    'aspn23_dds/MeasurementSatnavPubSubTypes.h',
    'aspn23_dds/MeasurementMagneticFieldMagnitudeCdrAux.hpp',
    'aspn23_dds/MeasurementFrequencyDifference.h',
    'aspn23_dds/MeasurementAccumulatedDistanceTraveledPubSubTypes.h',
    'aspn23_dds/TypeSatnavTimePubSubTypes.h',
    'aspn23_dds/MeasurementBarometer.h',
    'aspn23_dds/MetadataGalileoEphemeris.h',
    'aspn23_dds/MeasurementSatnavWithSvDataCdrAux.hpp',
    'aspn23_dds/TypeRemotePoint.h',
    'aspn23_dds/MeasurementPositionAttitude.h',
    'aspn23_dds/MeasurementMagneticFieldPubSubTypes.h',
    'aspn23_dds/MeasurementMagneticFieldCdrAux.hpp',
    'aspn23_dds/MetadataSatnavObsCdrAux.hpp',
    'aspn23_dds/MeasurementDirection3DToPoints.h',
    'aspn23_dds/TypeKeplerOrbitPubSubTypes.h',
    'aspn23_dds/MetadataGpsIonoUtcParametersPubSubTypes.h',
    'aspn23_dds/MeasurementImagePubSubTypes.h',
    'aspn23_dds/MetadataGpsCnavEphemeris.h',
    'aspn23_dds/MeasurementHeadingCdrAux.hpp',
    'aspn23_dds/MeasurementDirection2DToPoints.h',
    'aspn23_dds/MeasurementTdoa2Tx1RxCdrAux.hpp',
    'aspn23_dds/MetadataGeneric.h',
    'aspn23_dds/MeasurementPositionAttitudeCdrAux.hpp',
    'aspn23_dds/TypeMountingPubSubTypes.h',
    'aspn23_dds/TypeIntegrityPubSubTypes.h',
    'aspn23_dds/TypeImageFeatureCdrAux.hpp',
    'aspn23_dds/TypeSatnavSvDataPubSubTypes.h',
    'aspn23_dds/MeasurementTdoa1Tx2Rx.h',
    'aspn23_dds/MeasurementVelocityCdrAux.hpp',
    'aspn23_dds/MeasurementHeading.h',
    'aspn23_dds/MetadataGpsLnavEphemerisPubSubTypes.h',
    'aspn23_dds/TypeDirection2DToPointCdrAux.hpp',
    'aspn23_dds/MeasurementDirection2DToPointsCdrAux.hpp',
    'aspn23_dds/TypeSatnavClockCdrAux.hpp',
    'aspn23_dds/MetadataImageFeaturesPubSubTypes.h',
    'aspn23_dds/MetadataMagneticFieldPubSubTypes.h',
    'aspn23_dds/TypeDirection2DToPointPubSubTypes.h',
    'aspn23_dds/MeasurementAngularVelocityPubSubTypes.h',
    'aspn23_dds/MeasurementRangeToPointCdrAux.hpp',
    'aspn23_dds/MeasurementTemperature.h',
    'aspn23_dds/TypeDirection3DToPointCdrAux.hpp',
    'aspn23_dds/MeasurementSatnavSubframePubSubTypes.h',
    'aspn23_dds/MeasurementAccumulatedDistanceTraveled.h',
    'aspn23_dds/MeasurementTdoa2Tx1Rx.h',
    'aspn23_dds/TypeTimestampCdrAux.hpp',
    'aspn23_dds/MeasurementAttitude3D.h',
    'aspn23_dds/MeasurementDirection2DToPointsPubSubTypes.h',
    'aspn23_dds/TypeMountingCdrAux.hpp',
    'aspn23_dds/TypeSatnavObs.h',
    'aspn23_dds/MeasurementSpeed.h',
    'aspn23_dds/MeasurementRangeToPoint.h',
    'aspn23_dds/MeasurementTimeFrequencyDifferencePubSubTypes.h',
    'aspn23_dds/TypeSatnavSatelliteSystemPubSubTypes.h',
    'aspn23_dds/MeasurementAttitude2D.h',
    'aspn23_dds/MeasurementAngularVelocity1DPubSubTypes.h',
    'aspn23_dds/MetadataGlonassEphemerisPubSubTypes.h',
    'aspn23_dds/TypeMetadataheader.h',
    'aspn23_dds/MeasurementMagneticFieldMagnitudePubSubTypes.h',
    'aspn23_dds/MetadataGpsLnavEphemeris.h',
    'aspn23_dds/TypeDirection3DToPoint.h',
    'aspn23_dds/MeasurementPositionPubSubTypes.h',
    'aspn23_dds/MeasurementRangeRateToPoint.h',
    'aspn23_dds/MeasurementImuCdrAux.hpp',
    'aspn23_dds/MeasurementDeltaRange.h',
    'aspn23_dds/MetadataGpsLnavEphemerisCdrAux.hpp',
    'aspn23_dds/MeasurementTdoa1Tx2RxPubSubTypes.h',
    'aspn23_dds/MeasurementDeltaRangeToPointPubSubTypes.h',
    'aspn23_dds/TypeKeplerOrbitCdrAux.hpp',
    'aspn23_dds/MetadataBeidouEphemerisPubSubTypes.h',
    'aspn23_dds/MeasurementAccumulatedDistanceTraveledCdrAux.hpp',
    'aspn23_dds/TypeKeplerOrbit.h',
    'aspn23_dds/MeasurementRangeRateToPointPubSubTypes.h',
    'aspn23_dds/TypeMetadataheaderPubSubTypes.h',
    'aspn23_dds/TypeRemotePointPubSubTypes.h',
    'aspn23_dds/MeasurementBarometerPubSubTypes.h',
    'aspn23_dds/MeasurementPositionCdrAux.hpp',
    'aspn23_dds/MeasurementFrequencyDifferencePubSubTypes.h',
    'aspn23_dds/MeasurementPositionVelocityAttitudePubSubTypes.h',
    'aspn23_dds/MeasurementRangeToPointPubSubTypes.h',
    'aspn23_dds/MeasurementImu.h',
    'aspn23_dds/MeasurementTimeDifferenceCdrAux.hpp',
    'aspn23_dds/MeasurementVelocityPubSubTypes.h',
    'aspn23_dds/MeasurementAngularVelocity1D.h',
    'aspn23_dds/MeasurementAttitude3DPubSubTypes.h',
    'aspn23_dds/TypeImageFeaturePubSubTypes.h',
    'aspn23_dds/TypeSatnavSvDataCdrAux.hpp',
    'aspn23_dds/TypeSatnavObsPubSubTypes.h',
    'aspn23_dds/MetadataGalileoEphemerisPubSubTypes.h',
    'aspn23_dds/MeasurementHeadingPubSubTypes.h',
    'aspn23_dds/MeasurementDeltaPositionPubSubTypes.h',
    'aspn23_dds/TypeRemotePointCdrAux.hpp',
    'aspn23_dds/MeasurementAltitudeCdrAux.hpp',
    'aspn23_dds/MetadataGpsIonoUtcParametersCdrAux.hpp',
    'aspn23_dds/MetadataGenericCdrAux.hpp',
    'aspn23_dds/MeasurementDirectionOfMotion3DCdrAux.hpp',
    'aspn23_dds/MetadataGenericPubSubTypes.h',
    'aspn23_dds/MeasurementDirection3DToPointsCdrAux.hpp',
    'aspn23_dds/MeasurementTimeDifferencePubSubTypes.h',
    'aspn23_dds/MeasurementDirectionOfMotion2DCdrAux.hpp',
    'aspn23_dds/MeasurementMagneticFieldMagnitude.h',
    'aspn23_dds/MeasurementBarometerCdrAux.hpp',
    'aspn23_dds/MetadataGlonassEphemerisCdrAux.hpp'
]

aspn23_dds = library(
    'aspn23_dds',
    lib_files,
    soversion: meson.project_version(),
    include_directories: ['.'],
    cpp_args : '-Wno-non-virtual-dtor', # known error in epros output
    dependencies: [fastrtps_dep, fastcdr_dep],
    install: true
)

aspn23_dds_dep  = declare_dependency(
    link_with: aspn23_dds,
    include_directories: ['.'],
    dependencies: [fastrtps_dep, fastcdr_dep],
)

meson.override_dependency('aspn23_dds', aspn23_dds_dep)

# Install library headers
aspn23_dds_install_dir = get_option('includedir') / 'aspn23_dds'
foreach hxx_file : hxx_files
    install_headers(hxx_file, install_dir: aspn23_dds_install_dir)
endforeach

# generate pkgconfig
pkg = import('pkgconfig')
pkg.generate(aspn23_dds,
  name: 'aspn23_dds',
  description: 'Generated eprosima aspn23_dds code',
  version: meson.project_version()
)

