[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="aspn23_lcm"
version="0.1.0"
description="The LCM Python representation of ASPN-23"
dependencies=[
    "lcm>=1.5.1,<2"
]
requires-python = ">= 3.5"
license = 'Apache-2.0'
license-files = ['../../LICENSE']
readme = 'README.md'
